--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".DemoMainActivity"
+            android:name=".MainActivity"
             android:label="@string/title_activity_demo_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
